🐞 bug(update-extension-list.yml): fix pay path

--- a/.github/workflows/update-extension-list.yml
+++ b/.github/workflows/update-extension-list.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: "3.10.6"
 
       - name: run python script
-        run: python '.github\workflows\extension-list-updater.py'
+        run: python '.github/workflows/extension-list-updater.py'
 
       - name: commit files
         run: |
